10/31/11 Dilution: move Reset All button to same location as Molarity tab (upper right)
# 0.00.08 (58172) Oct 31, 2011
10/31/11 version for discussion with JC
10/31/11 Dilution: make beakers tall-and-skinny
10/31/11 add ability to specify independent x and y scale for beaker image
10/27/11 change request: order solutes by "rainbow color" (ROYGBIV) in Molarity tab
# 0.00.07 (58077) Oct 27, 2011
10/27/11 change some terminology in Solute model (precipitateSize, precipitateParticlesPerMole)
10/27/11 Molarity: center precipitate dev display
10/27/11 common: center root node on the stage
10/27/11 common: move range labels above/below vertical sliders and concentration display
10/27/11 Dilution: use (0,1) for range of M1 and M2
10/27/11 Molarity: minor cleanup in model
10/27/11 Dilution: change V1 range to (0,0.2)
10/27/11 fix SolutionNode to handle zero-volume solution
# 0.00.06 (58044) Oct 26, 2011
10/26/11 curved tick marks on beakers (Arc2D)
10/26/11 make all beakers the same size in Dilution tab
10/26/11 add temporary M1 display in Dilution tab, to demonstrate layout issues
10/26/11 cleanup of slider code
10/26/11 further generalization of beaker node, so it can be reused in Dilution tab
10/25/11 [58016] delete more stuff related to "Show values" feature
10/25/11 change min concentration label from "low" to "zero"
10/25/11 [57987] delete code related to "Show values" feature, it was becoming too difficult to continue supporting it
10/25/11 more fleshing out of Dilution model and canvas
10/25/11 i18n of Dilution tab
10/25/11 more fleshing out of Dilution canvas, generalization of components from Molarity tab
10/25/11 start fleshing out Dilution model and canvas
10/25/11 move definition of real solutions into  MolarityModel
10/25/11 create stubs for Dilution module
10/25/11 new beaker image from NP, cleaned up wonkiness near the spout
# 0.00.05 (57919) Oct 24, 2011
10/24/11 make arrow slightly larger in concentration display